[package]
name = "select-loop"
version = "0.1.0"
edition = "2021"
authors = ["nanocryk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
tokio = { version = "1.24.1", features = ["rt"] }
select-loop-proc = { path = "proc" }

[dev-dependencies]
tokio = { version = "1.24.1", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["time"]}
